# backtester

./: .gitignore  README.md  pyproject.toml  requirements.txt
backtester/: __init__.py
backtester/data/: __init__.py  loading.py  panel.py
backtester/engine/: __init__.py  backtest.py  portfolio.py
backtester/execution/: __init__.py  costs.py
backtester/metrics/: __init__.py  performance.py
backtester/signals/: __init__.py  cross_sectional.py  momentum.py
backtester/validation/: __init__.py  split.py  study.py  walk_forward.py
examples/: cross_sectional_oos_study.py  cross_sectional_study.py  momentum_study.py  oos_momentum_study.py  walk_forward_study.py
tests/: test_cross_sectional.py  test_data.py  test_engine.py  test_execution.py  test_metrics.py  test_panel.py  test_portfolio.py  test_signals.py  test_validation.py
