[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backtester"
description = "An honest, vectorized equity backtesting engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.dynamic]
version = { attr = "backtester.__version__" }

[tool.setuptools.packages.find]
include = ["backtester*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
